<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="umc.com.mobile.project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_fragment_home_to_fragment_date"
            app:destination="@id/fragment_date" />
    </fragment>

    <fragment
        android:id="@+id/fragment_grad_info"
        android:name="umc.com.mobile.project.ui.gradInfo.GradInfoFragment"
        android:label="@string/title_grad_info"
        tools:layout="@layout/fragment_grad_info" />

    <fragment
        android:id="@+id/fragment_career"
        android:name="umc.com.mobile.project.ui.career.CareerFragment"
        android:label="@string/title_career"
        tools:layout="@layout/fragment_career">
        <action
            android:id="@+id/action_fragment_career_to_fragment_career_edit"
            app:destination="@id/fragment_career_edit" />
    </fragment>

    <fragment
        android:id="@+id/fragment_career_edit"
        android:name="umc.com.mobile.project.ui.career.CareerEditFragment"
        android:label="@string/career_add"
        tools:layout="@layout/fragment_career_edit">
        <action
            android:id="@+id/action_fragment_career_edit_to_fragment_career"
            app:destination="@+id/fragment_career"/>
        <action
            android:id="@+id/action_fragment_career_edit_to_fragment_category_bottom"
            app:destination="@+id/fragment_category_bottom"/>
    </fragment>

    <fragment
        android:id="@+id/fragment_category_bottom"
        android:name="umc.com.mobile.project.ui.career.CategoryBottomFragment"
        android:label="카테고리"
        tools:layout="@layout/fragment_category_bottom"/>

    <fragment
        android:id="@+id/fragment_board"
        android:name="umc.com.mobile.project.ui.board.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/fragment_setting"
        android:name="umc.com.mobile.project.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/fragment_date"
        android:name="umc.com.mobile.project.ui.board.GradDateFragment"
        android:label="@string/title_date"
        tools:layout="@layout/fragment_grad_date" />

</navigation>